* Wed Jan 13 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.0-0
- Removed EL6 from supported OSes
- Added puppet 7 support

* Thu Apr 23 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.3.1-0
- Ensure that EL6/7+ use the 'files' or 'local' provider as is appropriate for
  their platform
- Migrate the documentation to focus on the 'files' provider since 'local' is
  not recommended to be used any longer
- Fixed the core acceptance tests

* Tue Jan 21 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.3.0-0
- Added EL8 support
- Removed requirement for sssd domain entry for el8 and SSSD V2 since
  using the implicit files provider is valid and even recommended
  for performance by some.  An sssd domain is still required for
  el6 and el7.
- Automatically include the service section if the service is included in
  sssd::services.
- Removed deprecated variables from ldap provider for EL8.
- Added new variables for providers in EL8.
- Added ifp to list of services in service type
- Added files to types of providers
- Added support for simplib version 4.0

* Tue Jun 04 2019 steven.pritchard <steven.pritchard@onyxpoint.com> - 6.2.0-0
- Add v2 compliance_markup data

* Thu Mar 14 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.6-0
- Fix the Active Directory tests

* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.6-0
- Expanded the upper limit of the stdlib Puppet module version
- Updated URLs in the README.md

* Fri Feb 22 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.5-0
- Change the sssd::provider::ldap::ldap_access_order defaults to
  ['ppolicy','pwd_expire_policy_renew'] by default to prevent accidental system
  lockouts on upgrade.

* Mon Jan 21 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.4-0
- Generated a REFERENCE.md
- Set the 'min_id' settings across the board to '1' to match the sssd defaults
  since they really have nothing to do with the target system's relationship
  with a centralized authentication service.