@@ -1,3 +1,7 @@
+* Thu Feb 18 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.4.0-0
+- Ensure that systems bound to FreeIPA, but not connected do not cause
+  compilation issues.
+
 * Wed Jan 13 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.0-0
 - Removed EL6 from supported OSes
 - Added puppet 7 support
